feat: start making Header

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,10 @@
 .app_dark_theme {
-    --bg-color: #ff5151;
-    --accent-color: #9b936f;
-    --primary-color: #96105a;
-    --secondary-color: #4066ad;
-    --third-color: #53a72c;
-    --inverted-bg-color: #f38181;
+    --bg-color: #1b1b1b;
+    --accent-color: #57b44b;
+    --primary-color: #fff;
+    --secondary-color: #264129;
+    --third-color: #df2789;
+    --inverted-bg-color: #474747;
 
     // skeleton
     --skeleton-color: #dbdbdb;
