--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -27,8 +27,9 @@
     --border-opacity: 40%;
 
     // sizes
-    --sidebar-width: 300px;
-    --sidebar-width-collapsed: 80px;
+    --header-height: 140px;
+    --header-scroll-height: 90px;
+    --container-width: 1140px;
 
     // z - index
     --modal-z-index: 10;
