--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,9 +1,6 @@
-.title {
-    color: var(--primary-color);
-}
-
+.title,
 .text {
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .error {
