--- a/src/widgets/Page/ui/Page.module.scss
+++ b/src/widgets/Page/ui/Page.module.scss
@@ -1,9 +1,7 @@
 .Page {
-    flex-grow: 1;
-    padding: 20px 20px 20px 40px;
-    height: calc(100vh - var(--navbar-height));
-    overflow-y: auto;
-    flex-shrink: 100;
+    max-width: var(--container-width);
+    margin: 0 auto;
+    padding: 25px 15px;
 }
 
 .trigger {
