feat: made an animation of the Header collapsing when scrolling

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -27,8 +27,8 @@
     --border-opacity: 40%;
 
     // sizes
-    --header-height: 140px;
-    --header-scroll-height: 90px;
+    --header-full-height: 140px;
+    --header-collapsed-height: 90px;
     --container-width: 1140px;
 
     // z - index
