--- a/src/app/styles/swiper.scss
+++ b/src/app/styles/swiper.scss
@@ -32,7 +32,7 @@
     position: absolute;
     z-index: var(--header-z-index);
     border-radius: var(--border-full-radius);
-    background: var(--accent-color) url('@/shared/assets/img/icons/arrow-ic.svg') 50% 50% no-repeat;
+    background: var(--accent-color) url("@/shared/assets/img/icons/arrow-ic.svg") 50% 50% no-repeat;
 }
 
 .swiper-prev-arrow {
