--- a/src/shared/ui/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/Stack/Flex/Flex.module.scss
@@ -30,6 +30,10 @@
     align-items: flex-end;
 }
 
+.alignStretch {
+    align-items: stretch;
+}
+
 .directionRow {
     flex-direction: row;
 }
@@ -60,4 +64,8 @@
 
 .max {
     width: 100%;
+}
+
+.wrap {
+    flex-wrap: wrap;
 }
