--- a/src/entities/Food/ui/FoodItem/FoodItem.module.scss
+++ b/src/entities/Food/ui/FoodItem/FoodItem.module.scss
@@ -1,7 +1,13 @@
-.FoodItem {
-    width: 250px;
+.img {
+    transition: transform 0.3s;
+    max-width: 250px;
 }
 
-.img {
-    max-width: 253px;
+.FoodItem {
+    width: 250px;
+    cursor: pointer;
+
+    &:hover .img {
+        transform: translateY(-5px);
+    }
 }
