feat: make FoodForm

--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -35,6 +35,16 @@
     text-align: center;
 }
 
+.size_xs {
+    .title {
+        font: var(--font-s);
+    }
+
+    .text {
+        font: var(--font-xs);
+    }
+}
+
 .size_s {
     .title {
         font: var(--font-m);
@@ -62,5 +72,15 @@
 
     .text {
         font: var(--font-l);
+    }
+}
+
+.size_xl {
+    .title {
+        font: var(--font-xl);
+    }
+
+    .text {
+        font: var(--font-xl);
     }
 }
