--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,6 +1,12 @@
 :root {
-    // S
     --font-family-main: "Montserrat", sans-serif;
+
+    // XS
+    --font-size-xs: 12px;
+    --font-line-xs: 20px;
+    --font-xs: 600 var(--font-size-xs) / var(--font-line-xs) var(--font-family-main);
+
+    // S
     --font-size-s: 14px;
     --font-line-s: 22px;
     --font-s: 500 var(--font-size-s) / var(--font-line-s) var(--font-family-main);
@@ -36,6 +42,7 @@
     --header-z-index: 5;
     --modal-z-index: 10;
     --popup-z-index: 9999;
+    --switchers-z-index: 99999;
 
     // opacity
     --opacity-half: 0.5;
