--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -61,6 +61,11 @@
     padding: 0;
 }
 
+.square.size_xs {
+    width: var(--font-line-xs);
+    height: var(--font-line-xs);
+}
+
 .square.size_s {
     width: var(--font-line-s);
     height: var(--font-line-s);
@@ -79,6 +84,10 @@
 .square.size_xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
+}
+
+.size_xs {
+    font: var(--font-xs);
 }
 
 .size_s {
@@ -101,6 +110,6 @@
     opacity: 0.5;
 }
 
-.fullWidth {
+.max {
     width: 100%;
 }
