--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,24 +1,27 @@
 .Modal {
-    position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
     right: 0;
     bottom: 0;
-    z-index: 100;
     opacity: 0;
-    pointer-events: none;
+    z-index: 100;
     display: flex;
+    position: fixed;
     align-items: center;
+    pointer-events: none;
     justify-content: center;
 }
 
 .content {
-    padding: 20px;
-    border-radius: 12px;
-    background: var(--bg-color);
-    transition: 0.3s transform;
-    transform: scale(0.5);
+    height: 600px;
+    width: 1000px;
     max-width: 60%;
+    position: relative;
+    border-radius: 12px;
+    transform: scale(0.5);
+    transition: 0.3s transform;
+    background: var(--bg-color);
+    padding: 40px 30px;
     z-index: var(--modal-z-index);
 }
 
@@ -36,4 +39,11 @@
     .content {
         transform: scale(0.2);
     }
+}
+
+.closeIcon {
+    top: 30px;
+    right: 30px;
+    cursor: pointer;
+    position: absolute;
 }
