feat: update Button and Text

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,6 +5,7 @@
     --secondary-color: #696f7a;
     --third-color: #ff2e65;
     --inverted-bg-color: #e3ecf5;
+    --inverted-btn-color: #f3f3f7;
 
     // skeleton
     --skeleton-color: #dbdbdb;
