--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -30,8 +30,8 @@
     --primary-shadow: 0 4px 24px 0 rgb(0 0 0 / 26%);
 
     // border
-    --border-primary-radius: 12px;
-    --border-full-radius: 50%;
+    --border-xs-radius: 8px;
+    --border-half-radius: 50%;
 
     // sizes
     --header-full-height: 140px;
