--- a/src/widgets/Header/ui/HeaderTop/HeaderTop.module.scss
+++ b/src/widgets/Header/ui/HeaderTop/HeaderTop.module.scss
@@ -4,3 +4,8 @@
     border-radius: 50%;
     background-color: var(--third-color);
 }
+
+.callBtn {
+    border-radius: 28px;
+    padding: 8px 28px;
+}
