--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -10,51 +10,39 @@
     }
 }
 
-.clear,
-.clearSecondary,
-.clearThird {
+.clear {
     padding: 0;
     border: none;
     background: none;
     outline: none;
 }
 
-.clearSecondary {
-    color: var(--secondary-color);
-}
-
-.clearThird {
-    color: var(--third-color);
-}
-
 .outline {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--inverted-bg-color);
     color: var(--primary-color);
     background: none;
 }
 
-.outlineSecondary {
-    border: 1px solid var(--secondary-color);
-    color: var(--secondary-color);
-    background: none;
-}
-
-.outlineThird {
-    border: 1px solid var(--third-color);
-    color: var(--third-color);
-    background: none;
-}
-
-.background {
-    background: var(--bg-color);
+.accent {
     color: var(--primary-color);
-    border: none;
+    background: var(--accent-color);
 }
 
-.backgroundInverted {
-    background: var(--inverted-bg-color);
+.inverted {
     color: var(--secondary-color);
-    border: none;
+    background: var(--inverted-btn-color);
+}
+
+.halfRadius {
+    border-radius: var(--border-half-radius);
+}
+
+.xsRadius {
+    border-radius: var(--border-xs-radius);
+}
+
+.xlRadius {
+    border-radius: var(--border-xl-radius);
 }
 
 .square {
