--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,6 +1,17 @@
-.title,
-.text {
+.primary {
     color: var(--primary-color);
+}
+
+.accent {
+    color: var(--accent-color);
+} 
+
+.secondary {
+    color: var(--secondary-color);
+}
+
+.third {
+    color: var(--third-color);
 }
 
 .error {
@@ -10,16 +21,6 @@
 
     .text {
         color: var(--error-dark-color);
-    }
-}
-
-.inverted {
-    .title {
-        color: var(--secondary-color);
-    }
-
-    .text {
-        color: var(--third-color);
     }
 }
 
