feat: update some styles

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -4,17 +4,22 @@
     // XS
     --font-size-xs: 12px;
     --font-line-xs: 20px;
-    --font-xs: 600 var(--font-size-xs) / var(--font-line-xs) var(--font-family-main);
+    --font-xs: 500 var(--font-size-xs) / var(--font-line-xs) var(--font-family-main);
 
     // S
     --font-size-s: 14px;
     --font-line-s: 22px;
-    --font-s: 500 var(--font-size-s) / var(--font-line-s) var(--font-family-main);
+    --font-s: 600 var(--font-size-s) / var(--font-line-s) var(--font-family-main);
 
     // M
     --font-size-m: 16px;
     --font-line-m: 24px;
     --font-m: 600 var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+
+    // M/L
+    --font-size-ml: 20px;
+    --font-line-ml: 28px;
+    --font-ml: 700 var(--font-size-ml) / var(--font-line-ml) var(--font-family-main);
 
     // L
     --font-size-l: 24px;
