--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -94,8 +94,10 @@
     font: var(--font-xl);
 }
 
-.disabled {
+.disabled,
+.disabled:hover {
     opacity: 0.5;
+    cursor: not-allowed;
 }
 
 .max {
