feat: add skeletons and change the database

--- a/src/features/FoodSelection/ui/FoodFormAdditionalIngredients/FoodFormAdditionalIngredients.module.scss
+++ b/src/features/FoodSelection/ui/FoodFormAdditionalIngredients/FoodFormAdditionalIngredients.module.scss
@@ -10,6 +10,10 @@
     max-width: 110px;
 }
 
+.selected {
+    border: 1px solid var(--accent-color);
+}
+
 .ingrImg {
     max-height: 65px;
     max-width: 80px;
