feat: made a map section

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -36,6 +36,7 @@
 
     // border
     --border-xs-radius: 8px;
+    --border-m-radius: 14px;
     --border-half-radius: 50%;
 
     // sizes
@@ -44,6 +45,7 @@
     --container-width: 1140px;
 
     // z - index
+    --text-z-index: 1;
     --header-z-index: 5;
     --modal-z-index: 10;
     --popup-z-index: 9999;
