feat: make Footer

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,6 +5,7 @@
     --secondary-color: #264129;
     --third-color: #df2789;
     --inverted-bg-color: #474747;
+    --inverted-btn-color: #292929;
 
     // skeleton
     --skeleton-color: #dbdbdb;
