--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,4 +1,8 @@
 .AppLink {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     color: var(--primary-color);
     transition: opacity 0.3s;
 
@@ -17,4 +21,11 @@
 
 .third {
     color: var(--third-color);
+}
+
+.outline {
+    padding: 12px 35px;
+    color: var(--primary-color);
+    border-radius: var(--border-m-radius);
+    border: 1px solid var(--inverted-bg-color);
 }
