feat: make Sidebar and start make Cart features

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -43,6 +43,7 @@
     --header-full-height: 140px;
     --header-collapsed-height: 90px;
     --container-width: 1140px;
+    --sidebar-width: 550px;
 
     // z - index
     --text-z-index: 1;
