--- a/src/shared/ui/Container/Container.module.scss
+++ b/src/shared/ui/Container/Container.module.scss
@@ -1,5 +1,5 @@
 .Container {
     margin: 0 auto;
     padding: 25px 15px;
-    max-width: var(--container-width);
+    width: var(--container-width);
 }
