--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,12 +2,17 @@
     cursor: pointer;
     padding: 8px 15px;
     color: var(--primary-color);
+    transition: opacity 0.3s, scale 0.3s;
+}
 
-    &:hover {
-        opacity: 0.8;
-        fill-opacity: 80%;
-        stroke-opacity: 80%;
-    }
+.opacityEffect:hover {
+    opacity: 0.8;
+    fill-opacity: 80%;
+    stroke-opacity: 80%;
+}
+
+.scaleEffect:hover {
+    scale: (1.02);
 }
 
 .clear {
