--- a/src/shared/ui/Sidebar/Sidebar.module.scss
+++ b/src/shared/ui/Sidebar/Sidebar.module.scss
@@ -20,7 +20,10 @@
     position: relative;
     transition: width 0.3s;
     background: var(--bg-color);
-    z-index: var(--modal-z-index);
+    z-index: var(--sidebar-z-index);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .closeIcon {
@@ -33,7 +36,7 @@
 .opened {
     opacity: 1;
     pointer-events: auto;
-    z-index: var(--modal-z-index);
+    z-index: var(--sidebar-z-index);
 
     .content {
         padding: 20px 25px;
